--- a/index.html
+++ b/index.html
@@ -4,16 +4,200 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="Luis Gaytan">
-    <meta name="description" content="Add Content Here">
-    <title>Title | Description</title>
+    <meta name="author" content="TechieDodo">
+    <meta name="description" content="TechieDodo is a California based web development agency focused on providing affordable wed design and development services to small businesses.">
+    <title>TechieDodo | Web Development Consulting</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/styles.min.css">
+    <link rel="shortbut icon" type="image/x-icon" href="./assets/images/TDfavicon.ico">
+    <script src="https://www.google.com/recaptcha/api.js"></script>
+    <!--if lt IE 9script(src='//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js')
+    -->
   </head>
-  <body>
-    <h1>Website</h1>
+  <body class="container-fluid">
+    <nav class="menu-section">
+      <div class="logo"><img src="./assets/images/dodo.png" alt="TechieDodo Logo"></div>
+      <div class="menu-toggle">
+        <div class="one"></div>
+        <div class="two"></div>
+        <div class="three"></div>
+      </div>
+      <div class="menu">
+        <ul role="navigation" class="hidden">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Our Work</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+      </div>
+    </nav>
+    <header>
+      <div class="header"></div>
+      <div class="content">
+        <div id="main-header">
+          <h1 class="main-header">
+             
+            Working with Small Businesses to Create & Build Digital Products.
+            <div class="small">Techie Dodo Can Help You Be Adaptable. Let's Talk.</div>
+          </h1>
+          <button class="btn btn-primary btn-lg">Lets Get Started</button>
+        </div>
+      </div>
+    </header>
+    <section class="services">
+      <div id="services">
+        <div class="row">
+          <div class="col-sm-offset-2 col-sm-8 text-center">
+            <h2>Custom website design is just the beginning...</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6 text-center"><img alt="MacBook Showing Website" src="./assets/images/macbook.png" id="left-img" class="img-responsive">
+            <h3>Digital</h3>
+            <hr>
+            <ul class="zero">
+              <li>Branding & Logo Design</li>
+              <li>eCommerce Web Design</li>
+              <li>WordPress Web Design</li>
+            </ul>
+          </div>
+          <div class="col-sm-6 text-center"><img alt="MacBook Showing Website" src="./assets/images/technical.png" id="right-img" class="img-responsive">
+            <h3>Technical</h3>
+            <hr>
+            <ul class="zero">
+              <li>Web Maintenance & Hosting</li>
+              <li>Application Development</li>
+              <li>Search Engine Optimization</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="cta">
+      <div class="row">
+        <div class="col-sm-12 text-center">
+          <h2>Your website shouldn't be an expense.<br>Let us turn it into a revenue-driving asset. </h2><img src="./assets/images/piggy-bank.svg" alt=""><br><a href="#contact" type="button" class="btn btn-primary btn-lg">Upgrade your site Today.</a>
+        </div>
+      </div>
+    </section>
+    <section class="secondary">
+      <div class="row">
+        <div id="left" class="col-sm-6 row">
+          <div class="col-xs-12 col-md-6 secondary-left"><img alt="MacBook Showing Website" src="./assets/images/Responsive-Web.png" class="img-responsive center-align"></div>
+          <div class="col-xs-12 col-md-6">
+            <h4>Responsive Websites</h4>
+            <p class="text-justify">Whether you need to blow away competition or require a stunning website design to inform people about what you do, we provide fully custom website design crafted for your audience and built around your needs.</p>
+          </div>
+        </div>
+        <div id="right" class="col-sm-6 row">
+          <div class="col-xs-12 col-md-6 col-lg-5 secondary-right"><img alt="Marketing Lightbulb" src="./assets/images/Marketing-Adj.png" class="img-responsive center-align"></div>
+          <div class="col-xs-12 col-md-6 col-lg-7">
+            <h4>Marketing 2.0</h4>
+            <p class="text-justify">At TechieDodo, we can research your existing customer base or investigate new markets. Don't rest on your laurels; there are legions of potential clients just waiting to hear all about you.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="projects">
+      <div id="projects">
+        <h3 class="text-uppercase">Recent Projects &mdash;<br>
+          <div class="small">Take a look at some of our work, and see how it postively impacted our clients</div>
+        </h3>
+        <div id="samples" class="row">
+          <div class="col-xs-4"><a href="http://chatsworthdental.com" target="_blank"><img src="./assets/images/ChatsworthDental.jpg" class="img-responsive"></a></div>
+          <div class="col-xs-4"><a href="http://AmericanCrewTransportation.com" target="_blank"><img src="./assets/images/AmericanCrewTransportation.jpg" class="img-responsive"></a></div>
+          <div class="col-xs-4"><a href="http://luisgaytan.com" target="_blank"><img src="./assets/images/WordPress-Website.jpg" class="img-responsive"></a></div>
+        </div>
+        <h4 class="text-center">
+           
+          We work to ensure you understand all aspects of your investment. <br>TechieDodo is a JARGON-Free environment.
+        </h4>
+      </div>
+    </section>
+    <section class="about">
+      <div id="about" class="row">
+        <div class="col-sm-5"><img alt="California Bear" src="./assets/images/cali-bear.png" id="cali-bear" class="img-responsive center-align"></div>
+        <div class="col-sm-7">
+          <h3 class="text-uppercase">TechieDodo &mdash; ABOUT US<br>
+            <div class="small">Cutting Edge Development from Sunny Southern California</div>
+          </h3>
+          <p>Businesses that want to strengthen their brand and grow their profits come to us for modern website design and marketing services.</p>
+          <p>Our talented team focuses on working with small businesses in almost every sector to create websites, e-commerce shops, brand identities and much more.</p>
+        </div>
+      </div>
+    </section>
+    <section class="contact">
+      <div id="contact" class="row">
+        <div class="col-sm-6">
+          <h3>We'll Put You on Equal Footing &mdash;<br>
+            <div class="small">Your Small Business Will have the Big Business Presence on the Web</div>
+          </h3>
+          <p class="text-justify">At TechieDodo we offer custom services at an affordable price. With all the challenges of running your own business, having to build a competitive online prescence should not be one of them. </p>
+          <p class="text-justify">Other services offer one-size fits all solution, but only we can ensure that your website is tailored to match your business needs. Templates will work well for some, but if you want help to create your unique brand, let TechieDodo help you achieve this goal.</p><img alt="Techie Dodo Logo" src="./assets/images/dodo-logo.png" id="logo-bottom" class="opacity">
+        </div>
+        <div id="right-form" class="col-sm-6">
+          <h4 class="text-center">Adapt & Fly. Let's Work Together.</h4>
+          <form id="contact-form" method="post" action="email.php" role="form">
+            <div class="messages"></div>
+            <div class="form-group">
+              <label for="email">E-Mail</label>
+              <input type="email" id="email" placeholder="Please enter Email" required="require" data-error="Please enter email." class="form-control">
+              <div class="help-block with-errors"></div>
+            </div>
+            <div class="form-group">
+              <label for="name">Name</label>
+              <input type="text" id="name" placeholder="Please enter Name" required="require" data-error="Please enter name." class="form-control">
+              <div class="help-block with-errors"></div>
+            </div>
+            <div class="form-group">
+              <label for="message">Message</label>
+              <textarea id="message" placeholder="Please enter Message" rows="5" required="require" data-error="Please enter message." class="form-control"></textarea>
+              <div class="help-block with-errors"></div>
+            </div>
+            <div class="form-group">
+              <div data-sitekey="6LcU4R4UAAAAAM_ZX-YrD1fjKo-V9zpVIwhkvUQB" class="g-recaptcha"></div>
+            </div>
+            <input type="submit" name="submit" id="submit" value="Send Message" class="btn btn-success btn-sm">
+          </form>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="footer row">
+        <div class="col-xs-6">
+          <h5>Menu
+            <ul> 
+              <li><a href="#home">Home</a></li>
+              <li><a href="#services">Services</a></li>
+              <li><a href="#about-us">About Us</a></li>
+              <li><a href="#contact">Contact Us</a></li>
+            </ul>
+          </h5>
+        </div>
+        <div class="col-xs-6">
+          <h5>Social
+            <ul> 
+              <li><a href="https://mobile.twitter.com/TechieDodo" target="_blank">Twitter</a></li>
+              <li><a href="https://github.com/TechieDodo" target="_blank">GitHub</a></li>
+              <li><a href="https://linkedin.com/in/luisgaytan" target="_blank">LinkedIn</a></li>
+            </ul>
+          </h5>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col-xs-5">
+          <h5><span id="first">Techie</span><span id="second">Dodo</span></h5>
+        </div>
+        <div class="col-xs-7 text-right"> 
+          <h5>Adapt & Fly Copyright &mdash; 2017 </h5>
+        </div>
+      </div>
+    </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="./scripts/validator.js"></script>
     <script src="./scripts/scripts.js"></script>
   </body>
 </html>
