--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
       <div class="menu">
         <ul role="navigation" class="hidden">
           <li><a href="#">Home</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Our Work</a></li>
-          <li><a href="#">Contact Us</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#projects">Our Work</a></li>
+          <li><a href="#about">About Us</a></li>
+          <li><a href="#contact">Contact Us</a></li>
         </ul>
       </div>
     </nav>
@@ -45,7 +45,7 @@
         </div>
       </div>
     </header>
-    <section class="services">
+    <section class="services"><a name="services"></a>
       <div id="services">
         <div class="row">
           <div class="col-sm-offset-2 col-sm-8 text-center">
@@ -99,7 +99,7 @@
         </div>
       </div>
     </section>
-    <section class="projects">
+    <section class="projects"><a name="projects"></a>
       <div id="projects">
         <h3 class="text-uppercase">Recent Projects &mdash;<br>
           <div class="small">Take a look at some of our work, and see how it postively impacted our clients</div>
@@ -115,7 +115,7 @@
         </h4>
       </div>
     </section>
-    <section class="about">
+    <section class="about"><a name="about"></a>
       <div id="about" class="row">
         <div class="col-sm-5"><img alt="California Bear" src="./assets/images/cali-bear.png" id="cali-bear" class="img-responsive center-align"></div>
         <div class="col-sm-7">
@@ -137,7 +137,7 @@
           <p class="text-justify">Other services offer one-size fits all solution, but only we can ensure that your website is tailored to match your business needs. Templates will work well for some, but if you want help to create your unique brand, let TechieDodo help you achieve this goal.</p><img alt="Techie Dodo Logo" src="./assets/images/dodo-logo.png" id="logo-bottom" class="opacity">
         </div>
         <div id="right-form" class="col-sm-6">
-          <h4 class="text-center">Adapt & Fly. Let's Work Together.</h4>
+          <h4 class="text-center">Adapt & Fly. Let's Work Together.</h4><a name="contact"></a>
           <form id="contact-form" method="post" action="email.php" role="form">
             <div class="messages"></div>
             <div class="form-group">
@@ -168,9 +168,10 @@
         <div class="col-xs-6">
           <h5>Menu
             <ul> 
-              <li><a href="#home">Home</a></li>
+              <li><a href="#">Home</a></li>
               <li><a href="#services">Services</a></li>
-              <li><a href="#about-us">About Us</a></li>
+              <li><a href="#projects">Our Work</a></li>
+              <li><a href="#about">About Us</a></li>
               <li><a href="#contact">Contact Us</a></li>
             </ul>
           </h5>
