added link to contact form

--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
              
             Working with Small Businesses to Create & Build Digital Products.
             <div class="small">Techie Dodo Can Help You Be Adaptable. Let's Talk.</div>
-          </h1>
-          <button class="btn btn-primary btn-lg">Lets Get Started</button>
+          </h1><a id="button" href="#contact" type="button" class="btn btn-primary btn-lg">Lets Get Started</a>
         </div>
       </div>
     </header>
